Bug 372085 - KMail 5.3.2: forwarding or replying to html mails do not preserve links
Summary: KMail 5.3.2: forwarding or replying to html mails do not preserve links
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.3.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-11-04 17:27 UTC by Till Schäfer
Modified: 2016-11-07 12:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.0
Sentry Crash Report:


Attachments
example email with embedded links (2.97 KB, application/mbox)
2016-11-04 17:27 UTC, Till Schäfer
Details
forwarded message (4.88 KB, application/mbox)
2016-11-06 14:06 UTC, Till Schäfer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Till Schäfer 2016-11-04 17:27:13 UTC
Created attachment 102034 [details]
example email with embedded links

When forwarding replying an HTML mail <a>-tags are not preserved.

Steps to reproduce: import the attached email and forward it.
Comment 1 Laurent Montel 2016-11-06 06:25:14 UTC
Could you provide a forwarding/replying email as mbox. 
For me it's ok here but perhaps I didn't see the problem.
Thanks
Comment 2 Laurent Montel 2016-11-06 06:40:25 UTC
Git commit da7acca24ee4feadef84423b65ec7310c1716ca0 by Montel Laurent.
Committed on 06/11/2016 at 06:39.
Pushed by mlaurent into branch 'master'.

Allow selection when we forward message

M  +1    -0    messagecomposer/src/helper/messagefactory.cpp

http://commits.kde.org/messagelib/da7acca24ee4feadef84423b65ec7310c1716ca0
Comment 3 Laurent Montel 2016-11-06 06:41:20 UTC
Git commit c5dc01643fbe68236332d0b42da1806bdb833368 by Montel Laurent.
Committed on 06/11/2016 at 06:40.
Pushed by mlaurent into branch 'master'.

Fix Bug 372085 - KMail 5.3.2: forwarding or replying to html mails do not preserve links

FIXED-IN: 5.4.0

M  +7    -4    src/kmcommands.cpp
M  +3    -2    src/kmcommands.h
M  +4    -3    src/kmmainwidget.cpp
M  +4    -4    src/kmreadermainwin.cpp

http://commits.kde.org/kmail/c5dc01643fbe68236332d0b42da1806bdb833368
Comment 4 Till Schäfer 2016-11-06 14:06:31 UTC
Created attachment 102069 [details]
forwarded message

although you have already closed this ticket: here is the requested forward

-> only the last link is preserved (out of 3)
-> another observation: in the composer window (before sending the message) even the third link is not clickable
Comment 5 Till Schäfer 2016-11-06 14:08:10 UTC
(In reply to Laurent Montel from comment #2)
> Git commit da7acca24ee4feadef84423b65ec7310c1716ca0 by Montel Laurent.
> Committed on 06/11/2016 at 06:39.
> Pushed by mlaurent into branch 'master'.
> 
> Allow selection when we forward message
> 
> M  +1    -0    messagecomposer/src/helper/messagefactory.cpp
> 
> http://commits.kde.org/messagelib/da7acca24ee4feadef84423b65ec7310c1716ca0

does it fix Bug 372072 ?
-> should i mark Bug 372072 as resolved and link in the commit?
Comment 6 Laurent Montel 2016-11-07 05:55:23 UTC
opps indeed it was 372072
I reopen it
Comment 7 Laurent Montel 2016-11-07 06:14:17 UTC
I see that link is on the "W" but not on all url.
So I can reproduce it.
I don't know why it broken as it.
Comment 8 Laurent Montel 2016-11-07 06:35:42 UTC
it seems to be a bug in qtextedit when we set html text.
Comment 9 Laurent Montel 2016-11-07 12:50:48 UTC
Git commit ce24fc860ee444147070573cda42fe2d1369d75c by Montel Laurent.
Committed on 07/11/2016 at 12:50.
Pushed by mlaurent into branch 'master'.

Fix Bug 372085 - KMail 5.3.2: forwarding or replying to html mails do not preserve links

FIXED-IN: 5.4.0

M  +3    -1    messagecomposer/src/composer/composerviewbase.cpp

http://commits.kde.org/messagelib/ce24fc860ee444147070573cda42fe2d1369d75c