Fix Bug 372085 - KMail 5.3.2: forwarding or replying to html mails do not preserve links

FIXED-IN: 5.4.0
BUG: 372085